improving grunt tasks

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CNN - Student Video Podcast Application</title>
-    <script src="./javascripts/main.js"></script>
+    <script src="./javascripts/app/main.js"></script>
     <link href="./stylesheets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="./stylesheets/css/main.css" rel="stylesheet"/>
 </head>
